# nrf-52833-dk-rust-examples

./: AGENTS.md  Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
src/: main.rs
