[package]
name = "nrf52833dk-rust-sample"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
panic-halt = "0.2.0"
nrf52833-hal = "0.12.2"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]
