[package]
name = "nrf52833dk-rust-sample"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.5", features = ["set-sp"] }
panic-probe = { version = "0.3.2", features = ["print-rtt"] }
rtt-target = "0.5.0"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["tick-hz-32_768"] }
embassy-nrf = { version = "0.1.0", features = ["nrf52833", "gpiote", "time-driver-rtc1"] }
nrf-softdevice = { version = "0.1", features = ["nrf52833", "s140", "ble-peripheral", "ble-gatt-server", "critical-section-impl"] }
nrf-softdevice-s140 = "0.1"
